--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ button {
   border-radius: 5px;
   padding: 20px;
   font-size: 20px;
+  margin-right: 10px;
 }
 #backspace {
   background-color: #cc3333;
