--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
   background-color: #0a0035;
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
@@ -56,4 +58,33 @@ td {
   margin: 10px;
   padding: 30px;
   color: white;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #616161;
+  color: #fff;
+  padding: 10px;
+  
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+}
+
+.logo h1 {
+  font-size: 24px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links li {
+  margin-right: 20px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: #fff;
 }
