--- a/style.css
+++ b/style.css
@@ -66,13 +66,13 @@ nav {
   align-items: center;
   background-color: #616161;
   color: #fff;
-  padding: 10px;
+  padding: 5px;
   
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
 .logo h1 {
-  font-size: 24px;
+  font-size: 40px;
 }
 
 .nav-links {
@@ -83,7 +83,9 @@ nav {
 .nav-links li {
   margin-right: 20px;
 }
-
+.nav-links i {
+  font-size: 30px;
+}
 .nav-links li a {
   text-decoration: none;
   color: #fff;
