--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html, body {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
-  background-color: #0a0035;
+  background: linear-gradient(to top right, #000000, #002b33);
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
+  color: #fff;
 }
 h1 {
   color: #fff;
@@ -43,14 +45,7 @@ table {
   text-align: center;
   border-spacing: 10px;
 }
-#winoverlay {
-  position: absolute;
-  top: 10%;
-  left: 70%;
-  width: 100%;
-  height: 100%;
-  filter: blur(2px);
-}
+
 td {
   border: 4px solid #fff;
   border-radius: 5px;
@@ -89,4 +84,36 @@ nav {
 .nav-links li a {
   text-decoration: none;
   color: #fff;
+}
+
+#winoverlay {
+  display: none; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 9999; 
+}
+
+
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
